--- a/templates/processingDemo.html
+++ b/templates/processingDemo.html
@@ -10,6 +10,8 @@
 
     <script>
     $(document).ready(function () {
+    localStorage.setItem('showCards', 'true');
+
     const status = [
         "Splitting video into frames",
         "Looking for objects",
