--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
             content += `<div class="card">
                         <img src="${blankCard}" alt="Soon">
                         <div class="card-content">
-                            <h3>EDENKING444</h3>
+                            <h3>Soon</h3>
                         </div>
                     </div>`;
 }
@@ -119,7 +119,7 @@
                         pattern="[A-Za-z0-9]+" title="Only letters (A-Z, a-z) and numbers (0-9) are allowed."
                          required>
                     </div>
-                    <button onclick="window.location.href='./processing'" class="btn btn-primary btn-block" disabled>Upload</button>
+                    <button onclick="window.location.href='./processing'" class="btn btn-primary btn-block">Upload</button>
                     <div class="demo"><h1>DEMO</h1></div>
                 </form>
             </div>
