update welcome pdf

--- a/templates/processingDemo.html
+++ b/templates/processingDemo.html
@@ -44,7 +44,7 @@
 
             // Step 4: Redirect to '/res' after 2 seconds
             setTimeout(() => {
-                window.location.href = '/res';
+                window.location.href = '/res?videoname=VHJhZmZpY1Nob3J0XzE4LTEyLTI0XzEyXzAz';
             }, 2000);
         }, percentage.length * 400); // Wait for the progress bar to complete
 
