fixing search with filters

--- a/templates/search.html
+++ b/templates/search.html
@@ -381,7 +381,7 @@
     }
 
     function searchWithFilters(params) {
-        return fetch('http://localhost:5000/searchWithFilters', {
+        return fetch('/searchWithFilters', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
