--- a/templates/processingDemo.html
+++ b/templates/processingDemo.html
@@ -50,91 +50,8 @@
 
     }, 2000); // Initial 2-second delay
 });
-
     </script>
-    <!-- <script>
-		var progressStatus='';
-        $(document).ready(function() {
-			progressStatus = document.getElementById('status');
-
-            function nextStep(step) {
-					console.log(step);
-                    var percentage = (step / steps) * 100;
-                    $('#progress-bar').css('width', percentage + '%');
-            };
-
-            var videoName2 = localStorage.getItem('fileName');
-            var videoName = localStorage.getItem('fileName');
-            var steps = 10;
-            var currentStep = 0;
-            var format = localStorage.getItem('format');
-
-            console.log(format)
-            $('#loadMessage').text("Analyzing: " + videoName.split('_')[0]);
-
-            function analyzeVideo(videoName, format) {
-				console.log("analyze call");
-                fetch('/analyze', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({"fileName": videoName, "format": format})
-                })
-                .then(response => response.json())
-                .then(response => {
-                    if (response.status == 200) {
-                        window.location.href = `/res?videoname=${btoa(videoName)}`;
-                    }
-                    if (response.status == 500) {
-                        window.location.href = './error'
-                    }
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                });
-            }
-
-            function updateVariable(fileName) {
-			console.log("inside");
-				if (progressStatus.innerText == 'Finishing up')
-					return;
-            // const socket = io(`${window.location.protocol}//${window.location.hostname}:5000`);
-
-                fetch(`/updateProgress`, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({"fileName": videoName})
-                })
-                .then(response => response.json())
-                .then(data => {
-                    console.log('Updated variable:', data);
-                    if (data.obj)
-                        document.getElementById('updates').innerText = `Object detected: ${data.obj}`;
-                    progressStatus.innerText = data.status;
-                    nextStep(data.nextStep)
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                });
-            }
-
-            function runParallelCalls(videoName, format) {
-                Promise.all([analyzeVideo(videoName, format), updateVariable(videoName2)])
-                    .then(() => {
-                        console.log('Both AJAX calls completed');
-						setInterval(()=> {updateVariable(videoName2);}, 1000);
-                    })
-                    .catch(error => {
-                        console.error('Error in parallel calls:', error);
-                    });
-            }
-            // Run the parallel calls
-            runParallelCalls(videoName, format);            
-        });
-    </script> -->
+   
 </head>
 <body>
     <div class="bar">
@@ -142,7 +59,7 @@
     </div>
     <div class="container">
         <div class="loader"></div>
-        <h1 id="loadMessage">Analyzing Demo:</h1>
+        <h1 id="loadMessage">Analyzing TrafficShort:</h1>
         <h4 id="updates"></h4>
     </div>
     <div class="progress-container">
