--- a/templates/index.html
+++ b/templates/index.html
@@ -56,8 +56,8 @@
                 // Calculate the difference in milliseconds
                 const diffInMilliseconds = Math.abs(time2 - time1);
 
-                // Convert milliseconds to minutes
-                diffInMinutes = Math.floor(diffInMilliseconds / (1000));
+                // Convert milliseconds to Minutes
+                diffInMinutes = Math.floor(diffInMilliseconds / (1000*60));
             }
             catch (error){
                 diffInMinutes=121;
