--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,12 @@
 <body>
     <div id="popup" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 80%; height: 90%; background: white; border: 1px solid #ccc; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); z-index: 1000;">
         <div id="pdfContent" style="width: 100%; height: calc(100% - 50px); background-color: white; border: 1px solid #ccc; padding: 20px; box-sizing: border-box; overflow-y: auto;">
-            <h1 style="text-align: center; font-size: 24px; margin-bottom: 20px;">Video Analyzer</h1>
-            <p style="font-size: 16px; line-height: 1.5;">
-                This site showcases the capabilities of the Video Analyzer project. The system analyzes videos by detecting objects using the YOLO algorithm, generating detailed video statistics, and providing advanced search features for efficient and precise retrieval of video content.
-            </p>
+            <div style="background-color: #f9f9f9; border-radius: 10px; padding: 30px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; text-align: center;">
+                <h1 style="text-align: center; font-size: 28px; font-weight: bold; margin-bottom: 20px; color: #333;">Video Analyzer</h1>
+                <p style="font-size: 16px; line-height: 1.8; color: #555;">
+                    This site showcases the capabilities of the Video Analyzer project. The system analyzes videos by detecting objects using the YOLO algorithm, generating detailed video statistics, and providing advanced search features for efficient and precise retrieval of video content.
+                </p>
+            </div>            
         </div>
                 <div id="dontShowContainer">
             <input type="checkbox" id="dontShowCheckbox">
