--- a/templates/index.html
+++ b/templates/index.html
@@ -17,12 +17,12 @@
                     This site showcases the capabilities of the Video Analyzer project. The system analyzes videos by detecting objects using the YOLO algorithm, generating detailed video statistics, and providing advanced search features for efficient and precise retrieval of video content.
                 </p>
             </div>
-            <div style="display: flex; justify-content: center; align-items: center; gap: 15px; margin-top: 20px; padding: 20px; flex-wrap: wrap;">
-                <img src="/static/webMedia/homepage.png" alt="homePage" style="width: 150px; height: 150px; object-fit: cover; border-radius: 10px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
+            <div style="display: flex; justify-content: center; align-items: center; gap: 15px; margin-top: 20px; padding: 20px; flex-wrap: wrap; max-width: 100%; box-sizing: border-box;">
+                <img src="/static/webMedia/homepage.png" alt="Home Page" style="width: 150px; height: 150px; object-fit: cover; border-radius: 10px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
                 <img src="/static/webMedia/processing.png" alt="Processing" style="width: 150px; height: 150px; object-fit: cover; border-radius: 10px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
                 <img src="/static/webMedia/result.png" alt="Result" style="width: 150px; height: 150px; object-fit: cover; border-radius: 10px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
                 <img src="/static/webMedia/search.png" alt="Search" style="width: 150px; height: 150px; object-fit: cover; border-radius: 10px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
-            </div>            
+            </div>                     
         </div>
                 <div id="dontShowContainer">
             <input type="checkbox" id="dontShowCheckbox">
